--- a/index.html
+++ b/index.html
@@ -407,6 +407,340 @@
                 margin-top: 8px;
             }
         }
+        .f-s-m-12 {
+            font-size: 12px; }
+        .f-s-28 {
+        font-size: 28px;
+        line-height: 1.4; }
+
+        .fw-normal {
+        font-weight: normal; }
+
+        .fw-medium {
+        font-weight: 500; }
+
+        .fw-600 {
+        font-weight: 600; }
+
+        .fw-bold {
+        font-weight: bold; }
+
+        @media screen and (max-width: 767px) {
+        .flc-product .Container.subscription {
+            padding: 0 40px; } }
+        .flc-product__products {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        flex-flow: row wrap;
+        max-width: 1008px;
+        /* 880px */
+        margin: 0 auto; }
+
+        .flc-product__meta {
+        margin-top: 32px;
+        padding-bottom: 24px; }
+        @media screen and (min-width: 768px) {
+            .flc-product__meta {
+            margin-top: 10px; } }
+
+        .flc-product__meta .product-title {
+        margin-bottom: 12px;
+        font-weight: 600; }
+
+        /* .flc-product__products .flc-product__product {
+        width:calc(50% - 24px);
+        } */
+        .flc-product__products .flc-product__product {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        flex-flow: row wrap;
+        width: 100%; }
+
+        .flc-product__product .flc-product__image, .flc-product__product .flc-product__info {
+        width: 100%; }
+        @media screen and (min-width: 768px) {
+            .flc-product__product .flc-product__image, .flc-product__product .flc-product__info {
+            width: calc(50% - 10px); } }
+        @media screen and (min-width: 850px) {
+            .flc-product__product .flc-product__image, .flc-product__product .flc-product__info {
+            width: calc(50% - 28px); } }
+
+        .flc-product__info .bold-ro__fixed-frequency-text {
+        font-size: 16px !important;
+        padding-bottom: 8px;
+        display: block; }
+
+        .flc-product__product .ro_widget {
+        margin-top: 32px; }
+        @media screen and (max-width: 767px) {
+            .flc-product__product .ro_widget {
+            margin-top: 24px; } }
+
+        .flc-product__product .bold-ro__recurring-title {
+        display: none; }
+
+        .flc-product__products .bold-ro__recurring-lbl {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center; }
+        .flc-product__products .bold-ro__recurring-lbl + .bold-ro__recurring-lbl {
+        margin-top: 32px; }
+        .flc-product__products .bold-ro__recurring-lbl:focus-within {
+        color: white; }
+        .flc-product__products input[type="radio"], .flc-product__products input[type="checkbox"] {
+        -webkit-appearance: none !important;
+        appearance: none !important;
+        margin: 0;
+        font: inherit;
+        width: 25px !important;
+        height: 25px;
+        border-radius: 50%;
+        margin-right: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+        .flc-product__products input[type="checkbox"] {
+        width: 22px !important;
+        height: 22px; }
+        .flc-product__products input[type="radio"]::before, .flc-product__products input[type="checkbox"]::before {
+        content: "";
+        width: 12px;
+        height: 12px;
+        border-radius: 50%;
+        transform: scale(0); }
+        .flc-product__products input[type="checkbox"]::before {
+        width: 11px;
+        height: 11px; }
+        .flc-product__products input[type="radio"]:checked::before, .flc-product__products input[type="checkbox"]:checked::before {
+        transform: scale(1); }
+        .flc-product__products .bold-ro__bold-active {
+        background: none;
+        border: none; }
+        .flc-product__products .bold-ro__radio-div {
+        padding-left: 0;
+        padding-right: 0; }
+        .flc-product__products .bold-ro__recurring-lbl {
+        font-weight: normal;
+        font-size: 16px;
+        padding-left: 5px; }
+        .flc-product__products .bold-ro__prepaid-checkbox-lbl, .flc-product__products .bold-ro__prepaid-gift-lbl {
+        font-size: 16px;
+        font-weight: normal;
+        padding-left: 0 !important;
+        margin-bottom: 0 !important; }
+        .flc-product__products .bold-ro__recurring-div select {
+        min-height: 46px !important;
+        font-size: 14px;
+        margin-top: 10px; }
+        .flc-product__products .bold-ro__prepaid-checkbox-container, .flc-product__products .bold-ro__prepaid-gift-container {
+        margin: 15px 0;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        flex-flow: row wrap; }
+        .flc-product__products .bold-ro__prepaid-total, .flc-product__products .bold-ro__fixed-frequency-text, .flc-product__products .bold-ro__limited-text {
+        font-size: 14px; }
+        .flc-product__products input[type="checkbox"], .flc-product__products input[type="checkbox"]::before {
+        border-radius: 0; }
+        .flc-product__products .bold-ro__frequency-label {
+        padding: 0; }
+        .flc-product__products .bold-ro__frequency-label > * {
+        padding-right: 24px;
+        padding-left: 24px; }
+        .flc-product__products .bold-ro__frequency-label > *:first-child {
+        padding-top: 32px;
+        display: block; }
+        .flc-product__products .bold-ro__frequency-label > *:last-child {
+        padding-bottom: 24px; }
+        .flc-product__products .slick-arrow.slick-next {
+        right: -40px; }
+        .flc-product__products .slick-arrow.slick-next .fa {
+            font-size: 30px;
+            font-weight: normal; }
+        .flc-product__products .slick-arrow.slick-prev {
+        left: -40px; }
+        .flc-product__products .slick-arrow.slick-prev .fa {
+            font-size: 30px;
+            font-weight: normal; }
+        .flc-product__products .flc-product__image img {
+        width: 100%; }
+        @media screen and (max-width: 767px) {
+        .flc-product__products .btn, .flc-product__products .product-shop .shopify-payment-button button.shopify-payment-button__button, .product-shop .shopify-payment-button .flc-product__products button.shopify-payment-button__button, .flc-product__products .product-shop .groups-btn .wishlist, .product-shop .groups-btn .flc-product__products .wishlist, .flc-product__products .tabs__product-page .spr-container .spr-summary-actions-newreview, .tabs__product-page .spr-container .flc-product__products .spr-summary-actions-newreview, .flc-product__products .addresses-page .btn-edit-delete a, .addresses-page .btn-edit-delete .flc-product__products a {
+            width: 100%; } }
+        .flc-product__products .slick-arrow {
+        top: calc(50% - 160px);
+        transform: translateY(calc(50% - 160px)); }
+        .flc-product__products .slick-dots {
+        margin: 0 auto;
+        padding-top: 40px; }
+        .flc-product__products .slick-dots button {
+            width: 16px;
+            height: 16px; }
+        .flc-product__products .groups-btn {
+        margin-top: 24px; }
+        .flc-product__products .gs__checkbox-input-title {
+        font-size: 14px !important; }
+        .flc-product__products .gs__checkbox-image {
+        filter: invert(1); }
+        .flc-product__products #product-variants, .flc-product__products .quantity {
+        margin-top: 10px; }
+        .flc-product__products #product-variants label, .flc-product__products .quantity label {
+            font-size: 16px;
+            font-weight: normal;
+            margin-top: 16px;
+            margin-bottom: 8px; }
+        .flc-product__products .qty-group {
+        min-height: 46px;
+        width: 100%;
+        max-width: 100%;
+        justify-content: space-between; }
+        .flc-product__products #gsAppContainer {
+        display: none; }
+        .flc-product__products .bold-ro__radio-div {
+        border: none; }
+        .flc-product__products .bold-ro__prepaid-gift-checkbox::before, .flc-product__products .bold-ro__prepaid-checkbox::before {
+        content: "" !important;
+        top: 0;
+        box-shadow: none !important;
+        position: relative;
+        left: 0;
+        background-image: url("https://cdn.shopify.com/s/files/1/0489/7760/8856/files/check.svg?v=1646867758");
+        width: 20px !important;
+        height: 20px !important;
+        background-repeat: no-repeat;
+        background-size: contain; }
+        .flc-product__products .bold-ro__prepaid-gift-checkbox:checked::before, .flc-product__products .bold-ro__prepaid-checkbox:checked::before {
+        transform: scale(1.35) !important; }
+        .flc-product__products .single-option-selector,
+        .flc-product__products .bold-ro__limited-length-select, .flc-product__products .bold-ro__prepaid-length-select {
+        background: white url("https://cdn.shopify.com/s/files/1/0489/7760/8856/files/select-dropdown.svg?v=1646870728") !important;
+        background-position: right 8px top 50% !important;
+        background-repeat: no-repeat !important; }
+        .flc-product__products .bold-ro__limited-text {
+        display: none; }
+
+        .videoContainer {
+        padding: 0 24px;
+        max-width: 1420px;
+        margin: 0 auto; }
+        @media screen and (min-width: 1024px) {
+            .videoContainer {
+            padding: 0 80px; } }
+
+        .VideoWrapper {
+        position: relative;
+        padding-bottom: 56.25%;
+        height: 0;
+        overflow: hidden;
+        max-width: 100%; }
+
+        .VideoWrapper iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%; }
+
+        .Modal--videoContent {
+        justify-content: center;
+        background: #000000;
+        color: #ffffff;
+        max-width: none;
+        max-height: none;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        transform: none;
+        position: fixed;
+        display: flex;
+        flex-direction: column;
+        visibility: hidden;
+        padding: 15px 20px 20px 20px;
+        z-index: 20;
+        opacity: 0;
+        overflow: auto;
+        transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out; }
+
+        .Modal.active {
+        visibility: visible;
+        opacity: 1; }
+
+        .Modal__Close {
+        display: block;
+        margin: 25px auto 0 auto;
+        flex-shrink: 0;
+        line-height: 0;
+        opacity: 0.5;
+        transition: opacity 0.2s ease-in-out;
+        position: absolute;
+        margin-top: 0;
+        right: 40px;
+        top: 40px;
+        cursor: pointer; }
+        .Modal__Close svg {
+            height: 16px;
+            width: 16px;
+            fill: currentColor;
+            stroke-width: 1.25px; }
+
+        .no-scroll {
+        overflow: hidden; }
+
+        .video__play-icon {
+        cursor: pointer;
+        transition: all 0.3s ease-in-out; }
+        .video__play-icon:hover {
+            opacity: 0.9; }
+
+        .slick__prev {
+        display: block;
+        background-image: url("https://cdn.shopify.com/s/files/1/0489/7760/8856/files/prev.svg?v=1646868740");
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 48px;
+        height: 48px; }
+        @media screen and (max-width: 767px) {
+            .slick__prev {
+            width: 30px;
+            height: 30px; } }
+
+        .slick__next {
+        display: block;
+        background-image: url("https://cdn.shopify.com/s/files/1/0489/7760/8856/files/next.svg?v=1646868740");
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 48px;
+        height: 48px; }
+        @media screen and (max-width: 767px) {
+            .slick__next {
+            width: 30px;
+            height: 30px; } }
+
+        /* FLC -- end */
+        /* 	WOT -- start */
+        .section__wrapper {
+        padding: 120px 0; }
+        @media screen and (max-width: 767px) {
+            .section__wrapper {
+            padding: 80px 0; } }
+
+        .form-two-group {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        flex-flow: row wrap; }
+
+        .form-two-group > * {
+        width: 100%; }
+        @media screen and (min-width: 768px) {
+            .form-two-group > * {
+            width: calc(50% - 16px); } }
+
     </style>
 </head>
 
@@ -430,9 +764,9 @@
                         <div class="on-tap__logo fw-bold f-s-20">
                             <a href="/">
 
-                                <img data-srcset="//www.winelab.ie/cdn/shop/files/logo-header_4de2430f-c0f2-4197-b6be-a960796a6431.png?v=1630561324"
+                                <img data-srcset="./logo.avif"
                                     alt="WineLab" class="lazyautosizes lazyloaded" data-sizes="auto" sizes="132px"
-                                    srcset="//www.winelab.ie/cdn/shop/files/logo-header_4de2430f-c0f2-4197-b6be-a960796a6431.png?v=1630561324">
+                                    srcset="./logo.avif">
 
                             </a>
                         </div>
@@ -473,6 +807,7 @@
                 transition: opacity 0.3s ease;
                 text-transform: uppercase;
                 letter-spacing: .05em;
+                text-decoration: none;
             }
 
             #header--new-page-header .on-tap__menu ul li {
@@ -601,7 +936,7 @@
                 <div class="section wine">
                     <div class="overlay">
                         <h1>WINE<br>ON TAP</h1>
-                        <a href="https://www.winelab.ie/pages/wine-on-tap" class="btn">EXPLORE</a>
+                        <a href="https://winestation.ie/pages/wine-on-tap" class="btn">EXPLORE</a>
                     </div>
                 </div>
 
@@ -609,7 +944,7 @@
                 <div class="section cocktails">
                     <div class="overlay">
                         <h1>COCKTAILS<br>ON TAP</h1>
-                        <a href="https://www.winelab.ie/pages/cocktails-on-tap" class="btn">DISCOVER</a>
+                        <a href="https://winestation.ie/pages/cocktails-on-tap" class="btn">DISCOVER</a>
                     </div>
                 </div>
 
@@ -694,7 +1029,7 @@
                 }
 
                 .btn {
-                    padding: 10px 20px;
+                    padding: 15px 30px;
                     border: 2px solid white;
                     text-decoration: none;
                     color: white;
