--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- Favicon -->
 
-    <link rel="shortcut icon" href="//www.winelab.ie/cdn/shop/files/favicon-v2_32x32.png?v=1638999431" type="image/png">
+    <!-- <link rel="shortcut icon" href="//www.winelab.ie/cdn/shop/files/favicon-v2_32x32.png?v=1638999431" type="image/png"> -->
 
 
     <style id="shopify-accelerated-checkout-cart">
@@ -775,11 +775,11 @@
 
                                 <ul>
 
-                                    <li><a class="fw-bold f-s-13" href="https://www.winelab.ie/pages/wine-on-tap">WINE
+                                    <li><a class="fw-bold f-s-13" href="https://winestation.ie/pages/wine-on-tap">WINE
                                             ON TAP</a></li>
 
                                     <li><a class="fw-bold f-s-13"
-                                            href="https://www.winelab.ie/pages/cocktails-on-tap">COCKTAILS ON
+                                            href="https://winestation.ie/pages/cocktails-on-tap">COCKTAILS ON
                                             TAP</a></li>
 
                                     <li><a class="fw-bold f-s-13" href="https://winestation.ie/">WINE STATION</a></li>
@@ -986,7 +986,7 @@
                 }
 
                 .wine {
-                    background: url('https://cdn.shopify.com/s/files/1/0489/7760/8856/files/Asset_2_3x_efdf6103-91d1-4a67-a7a8-4a2664fed82a.png?v=1729883100') no-repeat center center/cover;
+                    background: url('./wine-on-tap.webp') no-repeat center center/cover;
                 }
 
                 .main-content {
@@ -998,12 +998,12 @@
                 }
 
                 .cocktails {
-                    background: url('https://cdn.shopify.com/s/files/1/0489/7760/8856/files/Asset_3_3x_737edbd5-0ec2-44c4-8069-8b0f49f5ac84.png?v=1729883249') no-repeat center center/cover;
+                    background: url('./cocktails-on-tap.webp') no-repeat center center/cover;
                     background-color: #f9f9f9;
                 }
 
                 .wine-station {
-                    background: url('https://cdn.shopify.com/s/files/1/0489/7760/8856/files/Asset_4_3x_089790a6-a6fe-48a2-84df-15b85fbcdcc8.png?v=1729883249') no-repeat center center/cover;
+                    background: url('./wine-station.webp') no-repeat center center/cover;
                     background-color: orange;
                 }
 
@@ -1343,19 +1343,6 @@
         </div>
 
     </div>
-
-
-
-    <!-- Footer scripts -->
-    <script src="//www.winelab.ie/cdn/shop/t/29/assets/vendor.min.js?v=17695865373834453841668690895" defer=""></script>
-    <script src="//www.winelab.ie/cdn/shop/t/29/assets/api.jquery.js?v=13568615863607319991668690745" async=""></script>
-
-    <script
-        src="//www.winelab.ie/cdn/shopifycloud/shopify/assets/themes_support/option_selection-86cdd286ddf3be7e25d68b9fc5965d7798a3ff6228ff79af67b3f4e41d6a34be.js"
-        async=""></script>
-    <script>
-        window.show_auto_currency = true;
-    </script>
 
 
     <div id="currencies" style="display: none;">
