--- a/index.html
+++ b/index.html
@@ -910,6 +910,9 @@
                     width: 100%;
                     z-index: 2;
                 }
+                .on-tap-header__wrapper {
+                    width: 1300px;
+                }
             }
         </style>
 
@@ -1023,7 +1026,7 @@
                 }
 
                 .overlay h1 {
-                    font-size: 3rem;
+                    font-size: 2.5rem;
                     line-height: 1.2;
                     margin-bottom: 20px;
                 }
@@ -1060,7 +1063,7 @@
 
                     section a {
                         padding: 8px 20px;
-                        font-size: 0.9rem;
+                        font-size: 0.7rem;
                     }
                 }
             </style>
