--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
                         </div>
                         <div class="on-tap__return">
 
-                            <a href="https://winestation.ie/pages/contact-us" class="btn">Contact</a>
+                            <a href="https://winestation.ie/pages/contact-us" class="btn">CONTACT</a>
 
                         </div>
                     </div>
