--- a/index.html
+++ b/index.html
@@ -1343,7 +1343,7 @@
 
                 .footer-bottom p {
                     color: white;
-                    margin-top: 10px;
+                    /* margin-top: 10px; */
                     text-align: center;
                 }
 
