--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@
                 <div class="section bottle-portfolio">
                     <div class="overlay">
                         <h1>BOTTLE<br>PROJECT</h1>
-                        <a href="https://winestation.ie/pages/bottle-portfolio" class="btn">VIEW</a>
+                        <a href="./WineLab-BottleProject-2025-NP.pdf" class="btn">VIEW</a>
                     </div>
                 </div>
 
