footer and header changes

--- a/index.html
+++ b/index.html
@@ -778,6 +778,9 @@
                                     <li><a class="fw-bold f-s-13" href="https://winestation.ie/pages/wine-on-tap">WINE
                                             ON TAP</a></li>
 
+                                    <li><a href="./WineLab-BottleProject-2025-NP.pdf" 
+                                        class="fw-bold f-s-13" target="_blank">BOTTLE PROJECT</a></li>
+
                                     <li><a class="fw-bold f-s-13"
                                             href="https://winestation.ie/pages/cocktails-on-tap">COCKTAILS ON
                                             TAP</a></li>
@@ -1270,9 +1273,7 @@
 
                     <!-- Footer Bottom -->
                     <div class="footer-bottom">
-                        <p>© WineLab. All Rights Reserved | Branding &amp; Web Design by Studio Merriman | Developed by
-                            ORH
-                            Marketing</p>
+                        <p>© WineLab. All Rights Reserved </p>
                     </div>
                 </div>
             </footer>
