--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
                                     <li><a class="fw-bold f-s-13" href="https://winestation.ie/pages/wine-on-tap">WINE
                                             ON TAP</a></li>
 
-                                    <li><a href="./WineLab-BottleProject-2025-NP.pdf" 
+                                    <li><a href="./Winelab_BottleProject_WebBrochure.pdf" 
                                         class="fw-bold f-s-13" target="_blank">BOTTLE PROJECT</a></li>
 
                                     <li><a class="fw-bold f-s-13"
@@ -950,7 +950,7 @@
                 <div class="section bottle-portfolio">
                     <div class="overlay">
                         <h1>BOTTLE<br>PROJECT</h1>
-                        <a href="./WineLab-BottleProject-2025-NP.pdf" class="btn" target="_blank">VIEW</a>
+                        <a href="./Winelab_BottleProject_WebBrochure.pdf" class="btn" target="_blank">VIEW</a>
                     </div>
                 </div>
 
@@ -1260,8 +1260,8 @@
 
                         <!-- Address 1 -->
                         <div class="footer-col">
-                            <p>WineLab, 5 Thompson Enterprise Centre,<br>
-                                Clane Business Park, Clane, Co. Kildare, W91XYC8</p>
+                            <p>WineLab, 19 Monread Industrial Park,<br>
+                                Naas, Co. Kildare, W91 FTX6</p>
                         </div>
 
                         <!-- Address 2 -->
